readme file: running with different garbage collectors